[gd_scene load_steps=41 format=3 uid="uid://wg47gug4qmtq"]

[ext_resource type="Script" path="res://Scenes/Units/Wizards/hoplite.gd" id="1_0tjoi"]
[ext_resource type="Texture2D" uid="uid://c2dpksaudhqmt" path="res://Sprites/Units/Wizards/WizardHoplite/WizardGuardsmanAttack.png" id="2_vmjca"]
[ext_resource type="Texture2D" uid="uid://nb87vlsregve" path="res://Sprites/Units/Wizards/WizardHoplite/WizardGuardsmanDie.png" id="3_kpbhq"]
[ext_resource type="Texture2D" uid="uid://manx5l3b7rtx" path="res://Sprites/Units/Wizards/WizardHoplite/WizardGuardsmanWalk.png" id="4_8dt7s"]
[ext_resource type="AudioStream" uid="uid://sbvh53714spf" path="res://Sound Effects/laser-energy-sword-swipe-betacut-1-00-00.mp3" id="5_gwe4h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7308k"]
atlas = ExtResource("2_vmjca")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3q81"]
atlas = ExtResource("2_vmjca")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmblb"]
atlas = ExtResource("2_vmjca")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd10s"]
atlas = ExtResource("2_vmjca")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_76c7s"]
atlas = ExtResource("2_vmjca")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b221"]
atlas = ExtResource("2_vmjca")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_m45pt"]
atlas = ExtResource("2_vmjca")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fr3v"]
atlas = ExtResource("2_vmjca")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jahag"]
atlas = ExtResource("2_vmjca")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpqx"]
atlas = ExtResource("2_vmjca")
region = Rect2(0, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_11g03"]
atlas = ExtResource("2_vmjca")
region = Rect2(512, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p7p3"]
atlas = ExtResource("2_vmjca")
region = Rect2(1024, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_exm2q"]
atlas = ExtResource("3_kpbhq")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygjvj"]
atlas = ExtResource("3_kpbhq")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mewro"]
atlas = ExtResource("3_kpbhq")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmfrb"]
atlas = ExtResource("3_kpbhq")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfp47"]
atlas = ExtResource("3_kpbhq")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5thbq"]
atlas = ExtResource("3_kpbhq")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8gu8"]
atlas = ExtResource("3_kpbhq")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrcrx"]
atlas = ExtResource("3_kpbhq")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4jc5"]
atlas = ExtResource("3_kpbhq")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r0la"]
atlas = ExtResource("3_kpbhq")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhb7f"]
atlas = ExtResource("3_kpbhq")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_46a4a"]
atlas = ExtResource("3_kpbhq")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d0lf"]
atlas = ExtResource("3_kpbhq")
region = Rect2(0, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqvvh"]
atlas = ExtResource("4_8dt7s")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1o1r"]
atlas = ExtResource("4_8dt7s")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_adg84"]
atlas = ExtResource("4_8dt7s")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbfp4"]
atlas = ExtResource("4_8dt7s")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqa86"]
atlas = ExtResource("4_8dt7s")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvpdx"]
atlas = ExtResource("4_8dt7s")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_6sc6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7308k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3q81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmblb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd10s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76c7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b221")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m45pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fr3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jahag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11g03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p7p3")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exm2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygjvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mewro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmfrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfp47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5thbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8gu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrcrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4jc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r0la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhb7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46a4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d0lf")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqvvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1o1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adg84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbfp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqa86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvpdx")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6yiv"]
size = Vector2(2, 2.7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_628q2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47y6h"]

[node name="Hoplite" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_0tjoi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.187, 0.187)
sprite_frames = SubResource("SpriteFrames_6sc6y")
animation = &"attack"
frame_progress = 0.420717

[node name="RangeArea" type="Area2D" parent="."]
position = Vector2(-1, 1)
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="RangeArea"]
position = Vector2(36, 18)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_d6yiv")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 20)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_628q2")

[node name="HitboxArea" type="Area2D" parent="."]
collision_layer = 4

[node name="HITBOX" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(-5, 20)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_47y6h")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gwe4h")
volume_db = -10.0

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
[connection signal="area_exited" from="HitboxArea" to="." method="_on_hitbox_area_area_exited"]
